# stellar-kraal-contract

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
backend/: jest.config.js  package-lock.json  package.json  tsconfig.json
backend/loadtest/: ratelimit.js
backend/src/: app.ts  config.ts  index.ts
backend/src/chain/: chainClient.ts
backend/src/common/: metrics.ts
backend/src/credits/: routes.ts  (+1 more)
backend/tests/: idempotency.integration.test.ts  rateLimit.integration.test.ts
contracts/carbon_credit/: Cargo.toml
contracts/carbon_credit/fuzz/: Cargo.toml
contracts/carbon_credit/fuzz/fuzz_targets/: batch.rs  burn.rs  mint.rs  retire.rs  transfer.rs
contracts/carbon_marketplace/: Cargo.toml
contracts/carbon_oracle/: Cargo.toml
contracts/carbon_oracle/src/: lib.rs  tests.rs
contracts/carbon_oracle/test_snapshots/tests/: double_initialization_rejected.1.json  get_price_unknown_feed_returns_not_found.1.json  key_rotation_by_admin_succeeds.1.json  key_rotation_by_non_admin_rejected.1.json  multiple_feeds_stored_independently.1.json  negative_output_value_accepted.1.json  old_key_rejected_after_rotation.1.json  price_entry_stored_correctly.1.json  subsequent_updates_overwrite_previous.1.json  tampered_feed_id_rejected.1.json  tampered_input_params_hash_rejected.1.json  tampered_output_value_rejected.1.json  tampered_schema_version_rejected.1.json  tampered_script_hash_rejected.1.json  tampered_signature_rejected.1.json  tampered_timestamp_rejected.1.json  valid_attestation_is_accepted.1.json  wrong_key_rejected.1.json
contracts/carbon_registry/: Cargo.toml
contracts/stellarkraal/: Cargo.toml
docs/backend/: idempotency.md  rate-limiting.md
docs/oracle/: attestation-schema.md  commit-reveal-design.md
docs/security/: cross-contract-audit.md
oracle-bridge/: __init__.py  pyproject.toml  requirements.txt
oracle-bridge/oracle_bridge/: __init__.py  aggregation.py  attestation.py  bridge.py
oracle-bridge/tests/: test_aggregation.py  test_attestation.py  test_bridge_aggregation.py  test_integration.py
(+67 files in other folders)
